--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -1,5 +1,5 @@
 .brandText{
-    background-image: linear-gradient(100deg, #e3ebe6 0%, #cfcc10 100%);
+    background-image: linear-gradient(100deg, #a99606 0%, #535202 100%);
     background-color: white;
     background-clip: text;
     -webkit-background-clip: text;
