--- a/frontend/src/styles/LastSection.module.css
+++ b/frontend/src/styles/LastSection.module.css
@@ -52,11 +52,13 @@
     .lastSection h1 {
       font-size: 2rem; /* Smaller font size for phones */
       margin-bottom: 15px;
+      color: #f8f8ff;
     }
   
     .lastSection p {
       font-size: 1rem; /* Adjust font size for smaller screens */
       line-height: 1.4;
+      color: #f8f8ff;
     }
   }
   
@@ -64,10 +66,12 @@
   @media (max-width: 480px) {
     .lastSection h1 {
       font-size: 1.5rem;
+      color: #f8f8ff;
     }
   
     .lastSection p {
       font-size: 0.9rem;
       line-height: 1.3;
+      color: #f8f8ff;
     }
   }
