--- a/frontend/src/styles/numberInput.module.css
+++ b/frontend/src/styles/numberInput.module.css
@@ -77,3 +77,24 @@
     height: 16px;
     color: #fff;
   }
+
+  .addressInput {
+    width: 100%;
+    padding: 18px;
+    font-size: 20px;
+    border: 1px solid #f9f9f9;
+    border-radius: 4px;
+    background-color: #121212;
+    color: #e0c097; /* Font color */
+  }
+  
+  .addressInput::placeholder {
+    color: #e0c097; /* Placeholder text color */
+    opacity: 1; /* Ensure full visibility of placeholder */
+  }
+  
+  .addressInput:focus {
+    border: 1px solid #e0c097; /* Highlighted border color on focus */
+    outline: none; /* Removes default focus outline */
+    box-shadow: 0 0 5px #ffcc00;
+  }
