--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -16,8 +16,18 @@
 
 html,
 body {
+  scroll-behavior: smooth;
+  overflow: hidden;
+  height: 100%;
   max-width: 100vw;
   
+}
+body {
+  overflow-y: auto;
+}
+
+#_next {
+  height: 100%;
 }
 
 h1 {
