--- a/frontend/src/styles/EventQuestionnaire.module.css
+++ b/frontend/src/styles/EventQuestionnaire.module.css
@@ -11,7 +11,8 @@
   padding: 2rem;
   height: 100vh;
   overflow-y: auto;
-  position: fixed;
+  padding-bottom: 6rem; /* Ensure space for buttons */
+  position: relative; /* Change from fixed */
   top: 0;
   left: 50%;
   transform: translateX(-50%);
@@ -148,10 +149,16 @@
   color: rgba(253, 224, 71, 0.5);
 }
   
+  
   .buttonsContainer {
     margin-top: 3rem;
     display: flex;
     justify-content: space-between;
+    
+    bottom: 2rem;
+    background-color: black;
+    padding: 1rem;
+    z-index: 10;
   }
   
   .buttonPrev {
