--- a/frontend/src/styles/EventQuestionnaire.module.css
+++ b/frontend/src/styles/EventQuestionnaire.module.css
@@ -194,7 +194,7 @@
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   border: 1px solid rgba(121, 109, 1, 0.3);
-  color: rgba(253, 224, 71, 0.9);
+  background:linear-gradient(90deg, #FFC107, #FFA000);
 }
 
 .buttonPrev:disabled {
@@ -211,7 +211,7 @@
   justify-content: center;
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
-  background-color: #eab308;
+  background:linear-gradient(90deg, #FFC107, #FFA000);
   color: black;
   transition: background-color 150ms;
 }
