--- a/frontend/src/styles/facepage.module.css
+++ b/frontend/src/styles/facepage.module.css
@@ -67,6 +67,7 @@
   }
 
   .carouselCaption {
+    
     position: absolute;
     top: 72%;
     left: 50%;
@@ -74,9 +75,12 @@
     text-align: center;
     width: 80%;
     max-width: 800px;
-    background: rgba(0, 0, 0, 0.6);
-    padding: 1.5rem;
-    border-radius: 8px;
+    height: fit-content;
+    min-height: min-content;
+    max-height: max-content;
+    /* background: rgba(0, 0, 0, 0.2); 
+    padding: 20px;
+    border-radius: 10px;  */
     z-index: 10;
     transition: all 0.3s ease;
   }
@@ -90,7 +94,7 @@
   .carouselCaption p {
     font-size: 1.25rem;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    margin-bottom: 0;
+    margin-bottom: 4;
   }
   
   @media (max-width: 768px) {
@@ -101,7 +105,7 @@
     }
   
     .carouselCaption h1 {
-      font-size: 1.75rem;
+      font-size: 2.75rem;
     }
   
     .carouselCaption p {
