boxShadow for the buttons in index page

--- a/frontend/src/styles/ServiceSection.module.css
+++ b/frontend/src/styles/ServiceSection.module.css
@@ -57,6 +57,7 @@
   white-space: nowrap; /* Prevent text wrapping */
   overflow: hidden;/* Hide overflowing text */
   text-overflow: ellipsis; /* Add ellipsis for long text */
+  box-shadow: 4px 8px 12px rgba(0, 0, 0, 0.5), 2px 4px 6px rgba(255, 255, 255, 0.1) ;
 }
 
 .serviceButton:hover {
