--- a/frontend/src/styles/ServiceSection.module.css
+++ b/frontend/src/styles/ServiceSection.module.css
@@ -162,8 +162,9 @@
     }
   
     .serviceImage {
-      min-width: 200px; /* Smaller minimum size for mobile */
-      min-height: 200px;
+      width: 100%; /* Full width of the parent container */
+  height: auto; /* Maintain aspect ratio */
+  max-width: 350px; /* Optional: Limit the maximum size */
     }
   }
   
@@ -172,7 +173,11 @@
     align-items: center;
     gap: 4rem; /* Add space between buttons and icons */
   }
-
+  .ActionsContainer{
+    display: flex;
+    align-items: center;
+    gap: 4rem; /* Add space icons */
+  }
   .serviceIcon {
     color: var(--primary-color);
     transition: color 0.2s ease;
@@ -232,6 +237,11 @@
   @media (max-width: 768px) {
     .highlight {
       flex: 1 1 100%; /* Stack highlights on smaller screens */
+    }
+    .serviceActions {
+      margin-bottom: 2rem; /* Add space below the buttons */
+      flex-direction: column; /* Stack buttons on mobile */
+      gap: 1rem; /* Add space between buttons */
     }
   }
   .category {
