--- a/frontend/src/styles/ServiceSection.module.css
+++ b/frontend/src/styles/ServiceSection.module.css
@@ -179,6 +179,11 @@
       padding: 0.8rem 1rem; /* Adjust padding */
       margin-bottom: 5px; /* Add space between buttons */
     }
+
+    .serviceImage {
+      min-width: 300px; /* Smaller minimum width for small displays */
+      min-height: 300px; /* Smaller minimum height for small displays */
+    }
   
 
     
